# base_codec

./: .gitignore  CMakeLists.txt  README.md
app/: app.cpp
app/main_window/: main_window.cpp  main_window.h
app/main_window/mode_chooser_block/: mode_chooser_block.cpp  mode_chooser_block.h
app/main_window/open_file_block/: open_file_block.cpp  open_file_block.h
app/main_window/open_file_dialog/: open_file_dialog.cpp  open_file_dialog.h
app/main_window/progress_dialog/: progress_dialog.cpp  progress_dialog.h
app/window/: window.cpp  window.h
lib/base32/: base32.h
lib/base32/decoding/: decoding.cpp  decoding.h
lib/base32/encoding/: encoding.cpp  encoding.h
lib/base32/utility/: utility.cpp  utility.h
nsis/: setup.nsi
test/base32/: base32test.cpp
